# openai-cost-guard

./: README.md  pyproject.toml
.github/workflows/: ci.yml
openai_cost_guard/: __init__.py  cli.py  context.py  decorators.py  middleware.py  models.py  streaming.py  tracker.py
openai_cost_guard/reporters/: __init__.py  azure_monitor.py  console.py  json.py
scripts/: architecture.py  benchmark.py  inject_readme_section.py
tests/: test_async.py  test_azure_monitor.py  test_cli.py  test_decorators.py  test_integration.py  test_json_reporter.py  test_middleware.py  test_reporters.py  test_streaming.py  test_tracker.py
