[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-cost-guard"
version = "0.4.0"
description = "Cost tracking and budget enforcement for Azure OpenAI API calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["azure", "openai", "cost", "tracking", "budget", "azure-openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
openai-cost-guard = "openai_cost_guard.cli:main"

[project.optional-dependencies]
fastapi = [
    "starlette>=0.37",
]
azure = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "azure-monitor-opentelemetry-exporter>=1.0.0b20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "openai>=1.0",
    "respx>=0.20",
    "httpx>=0.27",
    "fastapi>=0.110",
    "starlette>=0.37",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "azure-monitor-opentelemetry-exporter>=1.0.0b20",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=openai_cost_guard --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
